--- a/src/AppBundle/Resources/views/Mail/registration.html.twig
+++ b/src/AppBundle/Resources/views/Mail/registration.html.twig
@@ -7,6 +7,7 @@
     <br />
     Пароль: {{ password }}
 </p>
+<p>Для активации Вашей учетной записи необохдимо перейти по ссылке <a href="{{ url('homepage') }}">Sellyourmodel.com</a>. Не активированные аккаунты блокируются через 24 часа.</p>
 <p>
     ---------
     <br />
